--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "@types/node": "^17.0.42",
     "@vercel/node": "^2.9.6",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "resend": "^4.6.0"
   }
 }
